# snappy-name-tool

./: Output: j6e  README.md  name_shortener.py  pyproject.toml  requirements.txt  s14l.py  sbom.json  test_s14l.py
.github/workflows/: python-test.yml
docs/: README.md
scripts/: generate_sbom.py
